feat: Track, for tracking water qualition overtime. remove: compare
